fix display on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Recursive:wght@300..1000&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 html, body {
-    height: 75%;
     margin: 0;
     padding: 0;
   }
@@ -14,8 +13,10 @@ html, body {
   }
 
 .content {
-    max-width: 750px;
+    width: 750px;
     margin: auto;
+    margin-left: 30px;
+    margin-right: 30px;
     display: flex;
     flex-direction: column; 
     justify-content: center; 
@@ -49,6 +50,10 @@ html, body {
     width: 24px;
     height: 24px;
     margin-top: 10px; 
+  }
+
+  header h1 {
+    margin-top: 100px;
   }
 
   h1 {
